--- a/reports/index.html
+++ b/reports/index.html
@@ -104,6 +104,9 @@
            pre, code.hljs{
              overflow: auto;
            }
+           .subtest {
+             width: 70%;
+            }
           </style>
           <div class="row justify-center">
             <table class="simple">
